## Copyright 2020 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

load("@rules_java//java:defs.bzl", "java_library", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

java_library(
    name = "jscomp",
    visibility = ["//visibility:public"],
    exports = [
        ":codegen",
        ":compiler_pass",
        ":conformance_java_proto",
        ":core",
        ":errors",
        ":pass_base",
        ":passes",
        ":renaming",
        ":source",
        ":zip",
    ],
)

java_library(
    name = "codegen",
    srcs = [
        "CodeConsumer.java",
        "CodeGenerator.java",
        "CodePrinter.java",
        "JSDocInfoPrinter.java",
        "OutputCharsetEncoder.java",
        "TypedCodeGenerator.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core",
        ":source",
        "//src/com/google/debugging/sourcemap",
        "//src/com/google/javascript/jscomp/parsing/parser:feature_set",
        "//src/com/google/javascript/rhino",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "compiler_pass",
    srcs = [
        "CompilerPass.java",
        "CustomPassExecutionTime.java",
        "HotSwapCompilerPass.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/com/google/javascript/rhino",
    ],
)

proto_library(
    name = "conformance_proto",
    srcs = [
        "conformance.proto",
    ],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "conformance_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":conformance_proto",
    ],
)

java_library(
    name = "core",
    srcs = [
        "AbstractCompiler.java",
        "AbstractScope.java",
        "AbstractVar.java",
        "AccessorSummary.java",
        "AnonymousFunctionNamingCallback.java",
        "AnonymousFunctionNamingPolicy.java",
        "AstAnalyzer.java",
        "AstFactory.java",
        "BasicBlock.java",
        "CheckPathsBetweenNodes.java",
        "CodeChangeHandler.java",
        "CodingConvention.java",
        "CompilerInput.java",
        "CompilerInputProvider.java",
        "CompilerOptions.java",
        "ControlFlowAnalysis.java",
        "ControlFlowGraph.java",
        "DataFlowAnalysis.java",
        "DefaultNameGenerator.java",
        "DependencyOptions.java",
        "EmptyMessageBundle.java",
        "Es6ToEs3Util.java",
        "ExportTestFunctions.java",
        "FlagUsageException.java",
        "GlobalVarReferenceMap.java",
        "HasCompiler.java",
        "IdGenerator.java",
        "IncrementalScopeCreator.java",
        "IndexProvider.java",
        "JSModule.java",
        "JSModuleGraph.java",
        "JoinOp.java",
        "JsAst.java",
        "JsIterables.java",
        "JsMessage.java",
        "JsMessageDefinition.java",
        "JsMessageVisitor.java",
        "LazyParsedDependencyInfo.java",
        "LinkedFlowScope.java",
        "MemoizedScopeCreator.java",
        "MessageBundle.java",
        "ModuleIdentifier.java",
        "NameAnonymousFunctions.java",
        "NameAnonymousFunctionsMapped.java",
        "NameGenerator.java",
        "NodeNameExtractor.java",
        "NodeTraversal.java",
        "NodeUtil.java",
        "PolymerExportPolicy.java",
        "PropertyRenamingPolicy.java",
        "Reference.java",
        "ReferenceCollectingCallback.java",
        "ReferenceCollection.java",
        "ReferenceMap.java",
        "Scope.java",
        "ScopeCreator.java",
        "ScopedName.java",
        "SourceAst.java",
        "SourceFileMapping.java",
        "SourceMap.java",
        "SourceMapInput.java",
        "SourceMapResolver.java",
        "SyntacticScopeCreator.java",
        "TypeMismatch.java",
        "TypeValidator.java",
        "TypedScope.java",
        "TypedVar.java",
        "UniqueIdSupplier.java",
        "Var.java",
        "VariableMap.java",
        "VariableRenamingPolicy.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler_pass",
        ":conformance_java_proto",
        ":errors",
        ":renaming",
        ":source",
        "//src/com/google/debugging/sourcemap",
        "//src/com/google/debugging/sourcemap/proto",
        "//src/com/google/javascript/jscomp/deps:dependencies",
        "//src/com/google/javascript/jscomp/deps:modules",
        "//src/com/google/javascript/jscomp/diagnostic",
        "//src/com/google/javascript/jscomp/graph",
        "//src/com/google/javascript/jscomp/modules:module",
        "//src/com/google/javascript/jscomp/modules:module_map",
        "//src/com/google/javascript/jscomp/modules:module_metadata_map",
        "//src/com/google/javascript/jscomp/parsing",
        "//src/com/google/javascript/jscomp/parsing/parser:feature_set",
        "//src/com/google/javascript/jscomp/parsing/parser/trees",
        "//src/com/google/javascript/jscomp/parsing/parser/util/format",
        "//src/com/google/javascript/jscomp/resources",
        "//src/com/google/javascript/jscomp/type",
        "//src/com/google/javascript/rhino",
        "//src/com/google/javascript/rhino/dtoa",
        "//third_party/com_google_auto/value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "errors",
    srcs = [
        "AbstractMessageFormatter.java",
        "BasicErrorManager.java",
        "CheckLevel.java",
        "CheckLevelLegacy.java",
        "ComposeWarningsGuard.java",
        "DiagnosticGroup.java",
        "DiagnosticGroupWarningsGuard.java",
        "DiagnosticType.java",
        "ErrorFormat.java",
        "ErrorHandler.java",
        "ErrorManager.java",
        "JSError.java",
        "LightweightMessageFormatter.java",
        "LoggerErrorManager.java",
        "MessageFormatter.java",
        "RhinoErrorReporter.java",
        "SortingErrorManager.java",
        "StrictWarningsGuard.java",
        "WarningsGuard.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":conformance_java_proto",
        ":source",
        "//src/com/google/debugging/sourcemap/proto",
        "//src/com/google/javascript/jscomp/parsing/parser/util/format",
        "//src/com/google/javascript/rhino",
        "//third_party/com_google_auto/value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "pass_base",
    srcs = [
        "ChangeVerifier.java",
        "JvmMetrics.java",
        "PassFactory.java",
        "PassNames.java",
        "PerformanceTracker.java",
        "PerformanceTrackerCodeSizeEstimator.java",
        "PhaseOptimizer.java",
        "RecentChange.java",
        "Tracer.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":codegen",
        ":compiler_pass",
        ":core",
        ":errors",
        ":source",
        "//src/com/google/javascript/jscomp/parsing/parser:feature_set",
        "//src/com/google/javascript/jscomp/parsing/parser/util/format",
        "//src/com/google/javascript/rhino",
        "//third_party/com_google_auto/value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "passes",
    srcs = [
        "AbstractPeepholeOptimization.java",
        "AccessControlUtils.java",
        "CheckAccessControls.java",
        "CheckClosureImports.java",
        "CheckConformance.java",
        "CheckConstPrivateProperties.java",
        "CheckDebuggerStatement.java",
        "CheckGlobalNames.java",
        "CheckGlobalThis.java",
        "CheckJSDoc.java",
        "CheckMissingAndExtraRequires.java",
        "CheckMissingGetCssName.java",
        "CheckMissingRequires.java",
        "CheckMissingReturn.java",
        "CheckProvides.java",
        "CheckRegExp.java",
        "CheckSideEffects.java",
        "CheckSuspiciousCode.java",
        "CheckTypeImportCodeReferences.java",
        "CheckUnreachableCode.java",
        "CheckUnusedPrivateProperties.java",
        "ClosureCheckModule.java",
        "ClosurePrimitiveErrors.java",
        "ClosureRewriteClass.java",
        "ClosureRewriteModule.java",
        "CollapseProperties.java",
        "CollectFileOverviewVisibility.java",
        "ConformanceRules.java",
        "ConstCheck.java",
        "DestructuredTarget.java",
        "DestructuringGlobalNameExtractor.java",
        "DiagnosticGroups.java",
        "Es6ConvertSuper.java",
        "Es6ConvertSuperConstructorCalls.java",
        "Es6ExtractClasses.java",
        "Es6ForOfConverter.java",
        "Es6NormalizeShorthandProperties.java",
        "Es6RelativizeImportPaths.java",
        "Es6RenameReferences.java",
        "Es6RenameVariablesInParamLists.java",
        "Es6RewriteArrowFunction.java",
        "Es6RewriteBlockScopedDeclaration.java",
        "Es6RewriteBlockScopedFunctionDeclaration.java",
        "Es6RewriteClass.java",
        "Es6RewriteClassExtendsExpressions.java",
        "Es6RewriteDestructuring.java",
        "Es6RewriteGenerators.java",
        "Es6RewriteModules.java",
        "Es6RewriteModulesToCommonJsModules.java",
        "Es6RewriteRestAndSpread.java",
        "Es6SplitVariableDeclarations.java",
        "Es6TemplateLiterals.java",
        "Es7RewriteExponentialOperator.java",
        "ExpressionDecomposer.java",
        "FunctionArgumentInjector.java",
        "FunctionToBlockMutator.java",
        "FunctionTypeBuilder.java",
        "GatherGetterAndSetterProperties.java",
        "GlobalNamespace.java",
        "GuardedCallback.java",
        "ImplicitNullabilityCheck.java",
        "InferJSDocInfo.java",
        "InjectTranspilationRuntimeLibraries.java",
        "InvocationTemplateTypeMatcher.java",
        "J2clChecksPass.java",
        "LateEs6ToEs3Converter.java",
        "MakeDeclaredNamesUnique.java",
        "MarkUntranspilableFeaturesAsRemoved.java",
        "ModuleImportResolver.java",
        "ModuleRenaming.java",
        "Normalize.java",
        "PeepholeFoldConstants.java",
        "PolyfillFindingCallback.java",
        "PolymerPassErrors.java",
        "PreprocessorSymbolTable.java",
        "ProcessClosurePrimitives.java",
        "ProcessClosureProvidesAndRequires.java",
        "ProcessCommonJSModules.java",
        "ProcessDefines.java",
        "ProcessTweaks.java",
        "Promises.java",
        "PropertyRenamingDiagnostics.java",
        "RemoveTrailingCommaFromParamList.java",
        "RenameLabels.java",
        "RewriteAsyncFunctions.java",
        "RewriteAsyncIteration.java",
        "RewriteCatchWithNoBinding.java",
        "RewriteNewDotTarget.java",
        "RewriteNullishCoalesceOperator.java",
        "RewriteObjectSpread.java",
        "RewritePolyfills.java",
        "StrictModeCheck.java",
        "TemplateAstMatcher.java",
        "TranspilationPasses.java",
        "TypeCheck.java",
        "TypeInference.java",
        "TypeInferencePass.java",
        "TypeMatchingStrategy.java",
        "TypeTransformation.java",
        "TypedScopeCreator.java",
        "VarCheck.java",
        "VariableReferenceCheck.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler_pass",
        ":conformance_java_proto",
        ":core",
        ":errors",
        ":pass_base",
        ":renaming",
        ":source",
        "//src/com/google/javascript/jscomp/deps:modules",
        "//src/com/google/javascript/jscomp/graph",
        "//src/com/google/javascript/jscomp/ijs:errors",
        "//src/com/google/javascript/jscomp/lint",
        "//src/com/google/javascript/jscomp/modules",
        "//src/com/google/javascript/jscomp/parsing",
        "//src/com/google/javascript/jscomp/parsing/parser:feature_set",
        "//src/com/google/javascript/jscomp/parsing/parser/trees",
        "//src/com/google/javascript/jscomp/parsing/parser/util/format",
        "//src/com/google/javascript/jscomp/regex",
        "//src/com/google/javascript/jscomp/resources",
        "//src/com/google/javascript/jscomp/type",
        "//src/com/google/javascript/rhino",
        "//third_party/com_google_auto/value",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "renaming",
    srcs = [
        "CssRenamingMap.java",
        "RenamingMap.java",
        "UniqueRenamingToken.java",
        "Xid.java",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "source",
    srcs = [
        "Region.java",
        "SimpleRegion.java",
        "SourceExcerptProvider.java",
        "SourceFile.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":zip",
        "//src/com/google/debugging/sourcemap/proto",
        "//src/com/google/javascript/rhino",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "zip",
    srcs = [
        "ZipEntryReader.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)
