## Copyright 2020 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

load("@rules_java//java:defs.bzl", "java_library")

# TODO(yannic): Break cyclic dependency with `jstype` package.
java_library(
    name = "rhino",
    srcs = glob([
        "*.java",
        "jstype/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/com_google_auto/value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)
