## Copyright 2020 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "modules",
    srcs = [
        "ClosureModuleProcessor.java",
        "ClosureRequireProcessor.java",
        "EsModuleProcessor.java",
        "GoogEsImports.java",
        "ModuleMapCreator.java",
        "ModuleRequestResolver.java",
        "NonEsModuleProcessor.java",
    ],
    visibility = ["//visibility:public"],
    exports = [
        ":module",
        ":module_map",
        ":module_metadata_map",
    ],
    deps = [
        ":module",
        ":module_map",
        ":module_metadata_map",
        "//src/com/google/javascript/jscomp:compiler_pass",
        "//src/com/google/javascript/jscomp:core",
        "//src/com/google/javascript/jscomp:errors",
        "//src/com/google/javascript/jscomp/deps:modules",
        "//src/com/google/javascript/rhino",
        "//third_party/com_google_auto/value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "module",
    srcs = [
        "Binding.java",
        "Export.java",
        "ExportTrace.java",
        "Import.java",
        "Module.java",
        "ModuleRequestResolver.java",
        "ResolveExportResult.java",
        "UnresolvedModule.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module_metadata_map",
        "//src/com/google/javascript/jscomp/deps:modules",
        "//src/com/google/javascript/rhino",
        "//third_party/com_google_auto/value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "module_map",
    srcs = [
        "ModuleMap.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//src/com/google/javascript/jscomp/deps:modules",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "module_metadata_map",
    srcs = [
        "ModuleMetadataMap.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/com/google/javascript/jscomp/deps:modules",
        "//src/com/google/javascript/rhino",
        "//third_party/com_google_auto/value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)
